style.scss
html, body {
	height: 100%;
}

body {
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 0;
}

main {
	font: 300 16px/1.5 "Helvetica Neue", "Helvetica", "Arial", sans-serif;
	padding: 20px 20px 60px;
}

h1 {
	font-size: 2em;
	font-weight: 700;
	line-height: 1.2;
	margin: 0;
}

ul {
	display: flex;
	list-style: none;
	font-size: .72em;
	font-weight: 600;
	line-height: 1.2;
	margin-block: 0.5em 0;
	padding-left: 1px;
	text-transform: uppercase;

	li:not(:empty) + li:before {
		content: '•';
		font-weight: 500;
		padding-inline: .3em;
	}

	a {
		color: #05c;
		text-decoration: none;

		&:focus,
		&:hover {
			text-decoration: underline;
		}
	}
}

